--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ gunicorn==20.0.4
 mysqlclient==1.4.6
 Pillow==6.2.1
 progressbar2==3.47.0
+psycopg2-binary==2.8.4
 pycodestyle==2.5.0
 python-decouple==3.3
 python-utils==2.3.0
